# hass-ollama-proxy

./: .copier-answers.yml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-and-publish.yml
src/home_assistant_ollama_proxy/: __init__.py  main.py
