[project]
name = "home_assistant_ollama_proxy"
version = "0.0.0"
description = "…"
readme = "README.md"
authors = [{name = "Scott Hyndman", email = "scotty.hyndman@gmail.com"}]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "rich>=14.0.0",
    "structlog>=25.4.0",
    "uvicorn>=0.35.0",
]
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/shyndman/home_assistant_ollama_proxy"
"Bug Tracker" = "https://github.com/shyndman/home_assistant_ollama_proxy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.pyright]
include = ["src", "tests"]
ignore = ["**/.venv"]
defineConstant = {DEBUG = true}
reportMissingImports = "error"
deprecateTypingAliases = true
reportDeprecated = "information"
pythonPlatform = "Linux"

[tool.ruff]
line-length = 100
target-version = "py311"
indent-width = 2

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["home_assistant_ollama_proxy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
